// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes module > CLINICAL_ROUTE_BY_PERIOD: snapshot of lookup table 1`] = `
{
  "clinical-1": {
    "key": "clinical-1",
    "meta": {
      "description": "Предмет, методы и задачи патопсихологии. Аномалии эмоционально-личностной сферы.",
      "title": "Патопсихология — DOM Academy",
    },
    "navLabel": "Предмет, методы патопсихологии",
    "path": "/clinical/1",
    "periodId": "clinical-1",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-10": {
    "key": "clinical-10",
    "meta": {
      "description": "Нарушения психического развития в детском возрасте.",
      "title": "Нарушения развития — DOM Academy",
    },
    "navLabel": "Нарушения развития у детей",
    "path": "/clinical/10",
    "periodId": "clinical-10",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-2": {
    "key": "clinical-2",
    "meta": {
      "description": "Диагностика и терапия расстройств личности.",
      "title": "Расстройства личности — DOM Academy",
    },
    "navLabel": "Расстройства личности",
    "path": "/clinical/2",
    "periodId": "clinical-2",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-3": {
    "key": "clinical-3",
    "meta": {
      "description": "Депрессия, мания и биполярное аффективное расстройство.",
      "title": "Аффективные расстройства — DOM Academy",
    },
    "navLabel": "Аффективные расстройства (БАР)",
    "path": "/clinical/3",
    "periodId": "clinical-3",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-4": {
    "key": "clinical-4",
    "meta": {
      "description": "Аффективные расстройства и суицидальность.",
      "title": "Суицидальность — DOM Academy",
    },
    "navLabel": "Суицидальность",
    "path": "/clinical/4",
    "periodId": "clinical-4",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-5": {
    "key": "clinical-5",
    "meta": {
      "description": "Шизофрения и расстройства психотического спектра.",
      "title": "Психотические расстройства — DOM Academy",
    },
    "navLabel": "Расстройства психотического спектра",
    "path": "/clinical/5",
    "periodId": "clinical-5",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-6": {
    "key": "clinical-6",
    "meta": {
      "description": "Патология памяти, восприятия и внимания.",
      "title": "Патология ВПФ — DOM Academy",
    },
    "navLabel": "Патология памяти, восприятия",
    "path": "/clinical/6",
    "periodId": "clinical-6",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-7": {
    "key": "clinical-7",
    "meta": {
      "description": "Классификация расстройств высших психических функций.",
      "title": "Расстройства ВПФ — DOM Academy",
    },
    "navLabel": "Классификация расстройств ВПФ",
    "path": "/clinical/7",
    "periodId": "clinical-7",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-8": {
    "key": "clinical-8",
    "meta": {
      "description": "Методы патопсихологической диагностики.",
      "title": "Патопсихологическая диагностика — DOM Academy",
    },
    "navLabel": "Патопсихологическая диагностика",
    "path": "/clinical/8",
    "periodId": "clinical-8",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-9": {
    "key": "clinical-9",
    "meta": {
      "description": "Проективные методы психодиагностики.",
      "title": "Проективная диагностика — DOM Academy",
    },
    "navLabel": "Проективные методы",
    "path": "/clinical/9",
    "periodId": "clinical-9",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  "clinical-intro": {
    "key": "clinical-intro",
    "meta": {
      "description": "Вводное занятие курса клинической психологии.",
      "title": "Введение в клиническую психологию — DOM Academy",
    },
    "navLabel": "Введение",
    "path": "/clinical/intro",
    "periodId": "clinical-intro",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
}
`;

exports[`routes module > CLINICAL_ROUTE_CONFIG: snapshot of full clinical course config 1`] = `
[
  {
    "key": "clinical-intro",
    "meta": {
      "description": "Вводное занятие курса клинической психологии.",
      "title": "Введение в клиническую психологию — DOM Academy",
    },
    "navLabel": "Введение",
    "path": "/clinical/intro",
    "periodId": "clinical-intro",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-1",
    "meta": {
      "description": "Предмет, методы и задачи патопсихологии. Аномалии эмоционально-личностной сферы.",
      "title": "Патопсихология — DOM Academy",
    },
    "navLabel": "Предмет, методы патопсихологии",
    "path": "/clinical/1",
    "periodId": "clinical-1",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-2",
    "meta": {
      "description": "Диагностика и терапия расстройств личности.",
      "title": "Расстройства личности — DOM Academy",
    },
    "navLabel": "Расстройства личности",
    "path": "/clinical/2",
    "periodId": "clinical-2",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-3",
    "meta": {
      "description": "Депрессия, мания и биполярное аффективное расстройство.",
      "title": "Аффективные расстройства — DOM Academy",
    },
    "navLabel": "Аффективные расстройства (БАР)",
    "path": "/clinical/3",
    "periodId": "clinical-3",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-4",
    "meta": {
      "description": "Аффективные расстройства и суицидальность.",
      "title": "Суицидальность — DOM Academy",
    },
    "navLabel": "Суицидальность",
    "path": "/clinical/4",
    "periodId": "clinical-4",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-5",
    "meta": {
      "description": "Шизофрения и расстройства психотического спектра.",
      "title": "Психотические расстройства — DOM Academy",
    },
    "navLabel": "Расстройства психотического спектра",
    "path": "/clinical/5",
    "periodId": "clinical-5",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-6",
    "meta": {
      "description": "Патология памяти, восприятия и внимания.",
      "title": "Патология ВПФ — DOM Academy",
    },
    "navLabel": "Патология памяти, восприятия",
    "path": "/clinical/6",
    "periodId": "clinical-6",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-7",
    "meta": {
      "description": "Классификация расстройств высших психических функций.",
      "title": "Расстройства ВПФ — DOM Academy",
    },
    "navLabel": "Классификация расстройств ВПФ",
    "path": "/clinical/7",
    "periodId": "clinical-7",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-8",
    "meta": {
      "description": "Методы патопсихологической диагностики.",
      "title": "Патопсихологическая диагностика — DOM Academy",
    },
    "navLabel": "Патопсихологическая диагностика",
    "path": "/clinical/8",
    "periodId": "clinical-8",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-9",
    "meta": {
      "description": "Проективные методы психодиагностики.",
      "title": "Проективная диагностика — DOM Academy",
    },
    "navLabel": "Проективные методы",
    "path": "/clinical/9",
    "periodId": "clinical-9",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
  {
    "key": "clinical-10",
    "meta": {
      "description": "Нарушения психического развития в детском возрасте.",
      "title": "Нарушения развития — DOM Academy",
    },
    "navLabel": "Нарушения развития у детей",
    "path": "/clinical/10",
    "periodId": "clinical-10",
    "placeholderDefaultEnabled": false,
    "themeKey": "clinical",
  },
]
`;

exports[`routes module > GENERAL_ROUTE_BY_PERIOD: snapshot of lookup table 1`] = `
{
  "general-1": {
    "key": "general-1",
    "meta": {
      "description": "История психологии, подходы и методы исследования.",
      "title": "История психологии и методы — DOM Academy",
    },
    "navLabel": "История психологии и методы",
    "path": "/general/1",
    "periodId": "general-1",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-10": {
    "key": "general-10",
    "meta": {
      "description": "Регуляция эмоций и кросс-культурные исследования.",
      "title": "Чувства и регуляция — DOM Academy",
    },
    "navLabel": "Чувства и регуляция",
    "path": "/general/10",
    "periodId": "general-10",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-11": {
    "key": "general-11",
    "meta": {
      "description": "Теории мотивации и место в структуре личности.",
      "title": "Мотивация — DOM Academy",
    },
    "navLabel": "Мотивация",
    "path": "/general/11",
    "periodId": "general-11",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-12": {
    "key": "general-12",
    "meta": {
      "description": "Функции воли, онтогенез и практические модели.",
      "title": "Саморегуляция и воля — DOM Academy",
    },
    "navLabel": "Саморегуляция и воля",
    "path": "/general/12",
    "periodId": "general-12",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-2": {
    "key": "general-2",
    "meta": {
      "description": "Методологические проблемы изучения психики.",
      "title": "Методологические проблемы — DOM Academy",
    },
    "navLabel": "Методологические проблемы",
    "path": "/general/2",
    "periodId": "general-2",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-3": {
    "key": "general-3",
    "meta": {
      "description": "Свойства образов и теории восприятия.",
      "title": "Ощущение и восприятие — DOM Academy",
    },
    "navLabel": "Ощущение и восприятие",
    "path": "/general/3",
    "periodId": "general-3",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-4": {
    "key": "general-4",
    "meta": {
      "description": "Классические и когнитивные модели внимания.",
      "title": "Внимание — DOM Academy",
    },
    "navLabel": "Внимание",
    "path": "/general/4",
    "periodId": "general-4",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-5": {
    "key": "general-5",
    "meta": {
      "description": "Классика, конструкции и искажения памяти.",
      "title": "Память. Часть 1 — DOM Academy",
    },
    "navLabel": "Память. Часть 1",
    "path": "/general/5",
    "periodId": "general-5",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-6": {
    "key": "general-6",
    "meta": {
      "description": "Когнитивные модели и функции памяти.",
      "title": "Память. Часть 2 — DOM Academy",
    },
    "navLabel": "Память. Часть 2",
    "path": "/general/6",
    "periodId": "general-6",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-7": {
    "key": "general-7",
    "meta": {
      "description": "Развитие мышления, интериоризация и когнитивные искажения.",
      "title": "Мышление — DOM Academy",
    },
    "navLabel": "Мышление",
    "path": "/general/7",
    "periodId": "general-7",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-8": {
    "key": "general-8",
    "meta": {
      "description": "Взаимосвязь речи и мышления, язык и билингвизм.",
      "title": "Речь — DOM Academy",
    },
    "navLabel": "Речь",
    "path": "/general/8",
    "periodId": "general-8",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-9": {
    "key": "general-9",
    "meta": {
      "description": "Теории эмоций, классификация и эволюция.",
      "title": "Эмоциональная сфера — DOM Academy",
    },
    "navLabel": "Эмоциональная сфера",
    "path": "/general/9",
    "periodId": "general-9",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  "general-intro": {
    "key": "general-intro",
    "meta": {
      "description": "Общая информация о курсе, структуре занятий и экзамене.",
      "title": "Введение в курс общей психологии — DOM Academy",
    },
    "navLabel": "Введение",
    "path": "/general/intro",
    "periodId": "general-intro",
    "placeholderDefaultEnabled": true,
    "placeholderText": "На этой вводной странице собрана общая информация о курсе общей психологии, формате занятий и итоговой аттестации. Ниже переходите к первой теме.",
    "themeKey": "general",
  },
}
`;

exports[`routes module > GENERAL_ROUTE_CONFIG: snapshot of full general course config 1`] = `
[
  {
    "key": "general-intro",
    "meta": {
      "description": "Общая информация о курсе, структуре занятий и экзамене.",
      "title": "Введение в курс общей психологии — DOM Academy",
    },
    "navLabel": "Введение",
    "path": "/general/intro",
    "periodId": "general-intro",
    "placeholderDefaultEnabled": true,
    "placeholderText": "На этой вводной странице собрана общая информация о курсе общей психологии, формате занятий и итоговой аттестации. Ниже переходите к первой теме.",
    "themeKey": "general",
  },
  {
    "key": "general-1",
    "meta": {
      "description": "История психологии, подходы и методы исследования.",
      "title": "История психологии и методы — DOM Academy",
    },
    "navLabel": "История психологии и методы",
    "path": "/general/1",
    "periodId": "general-1",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-2",
    "meta": {
      "description": "Методологические проблемы изучения психики.",
      "title": "Методологические проблемы — DOM Academy",
    },
    "navLabel": "Методологические проблемы",
    "path": "/general/2",
    "periodId": "general-2",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-3",
    "meta": {
      "description": "Свойства образов и теории восприятия.",
      "title": "Ощущение и восприятие — DOM Academy",
    },
    "navLabel": "Ощущение и восприятие",
    "path": "/general/3",
    "periodId": "general-3",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-4",
    "meta": {
      "description": "Классические и когнитивные модели внимания.",
      "title": "Внимание — DOM Academy",
    },
    "navLabel": "Внимание",
    "path": "/general/4",
    "periodId": "general-4",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-5",
    "meta": {
      "description": "Классика, конструкции и искажения памяти.",
      "title": "Память. Часть 1 — DOM Academy",
    },
    "navLabel": "Память. Часть 1",
    "path": "/general/5",
    "periodId": "general-5",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-6",
    "meta": {
      "description": "Когнитивные модели и функции памяти.",
      "title": "Память. Часть 2 — DOM Academy",
    },
    "navLabel": "Память. Часть 2",
    "path": "/general/6",
    "periodId": "general-6",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-7",
    "meta": {
      "description": "Развитие мышления, интериоризация и когнитивные искажения.",
      "title": "Мышление — DOM Academy",
    },
    "navLabel": "Мышление",
    "path": "/general/7",
    "periodId": "general-7",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-8",
    "meta": {
      "description": "Взаимосвязь речи и мышления, язык и билингвизм.",
      "title": "Речь — DOM Academy",
    },
    "navLabel": "Речь",
    "path": "/general/8",
    "periodId": "general-8",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-9",
    "meta": {
      "description": "Теории эмоций, классификация и эволюция.",
      "title": "Эмоциональная сфера — DOM Academy",
    },
    "navLabel": "Эмоциональная сфера",
    "path": "/general/9",
    "periodId": "general-9",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-10",
    "meta": {
      "description": "Регуляция эмоций и кросс-культурные исследования.",
      "title": "Чувства и регуляция — DOM Academy",
    },
    "navLabel": "Чувства и регуляция",
    "path": "/general/10",
    "periodId": "general-10",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-11",
    "meta": {
      "description": "Теории мотивации и место в структуре личности.",
      "title": "Мотивация — DOM Academy",
    },
    "navLabel": "Мотивация",
    "path": "/general/11",
    "periodId": "general-11",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
  {
    "key": "general-12",
    "meta": {
      "description": "Функции воли, онтогенез и практические модели.",
      "title": "Саморегуляция и воля — DOM Academy",
    },
    "navLabel": "Саморегуляция и воля",
    "path": "/general/12",
    "periodId": "general-12",
    "placeholderDefaultEnabled": false,
    "themeKey": "general",
  },
]
`;

exports[`routes module > ROUTE_BY_PERIOD: snapshot of lookup table 1`] = `
{
  "22-27": {
    "key": "22-27",
    "meta": {
      "description": "Мы готовим материалы для ранней взрослости 22–27 лет.",
      "title": "Ранняя зрелость 22–27 — DOM Academy",
    },
    "navLabel": "Ранняя зрелость (22–27 лет)",
    "path": "/22-27",
    "periodId": "22-27",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 22–27 лет появится в ближайшем обновлении.",
    "themeKey": "earlyAdult",
  },
  "adolescence": {
    "key": "14-18",
    "meta": {
      "description": "Социализация, принятие решений и развитие личности подростков.",
      "title": "Подростковость 14–18 — DOM Academy",
    },
    "navLabel": "Средняя подростковость (14–18 лет)",
    "path": "/14-18",
    "periodId": "adolescence",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 14–18 лет появится в ближайшем обновлении.",
    "themeKey": "teen",
  },
  "earlyAdolescence": {
    "key": "10-13",
    "meta": {
      "description": "Нейробиология риска, идентичность и поддержка пре-подростков.",
      "title": "Ранняя подростковость 10–13 — DOM Academy",
    },
    "navLabel": "Ранняя подростковость (10–13 лет)",
    "path": "/10-13",
    "periodId": "earlyAdolescence",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 10–13 лет появится в ближайшем обновлении.",
    "themeKey": "earlyTeen",
  },
  "earlyAdult": {
    "key": "28-40",
    "meta": {
      "description": "Работа, близость и развитие партнёрства в 28–40 лет.",
      "title": "Ранняя зрелость 28–40 — DOM Academy",
    },
    "navLabel": "Ранняя зрелость (28–40 лет)",
    "path": "/28-40",
    "periodId": "earlyAdult",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 28–40 лет появится в ближайшем обновлении.",
    "themeKey": "midAdult1",
  },
  "emergingAdult": {
    "key": "19-22",
    "meta": {
      "description": "Переход ко взрослости, идентичность и профессиональный поиск.",
      "title": "Юность 19–22 — DOM Academy",
    },
    "navLabel": "Юность (19–22 года)",
    "path": "/19-22",
    "periodId": "emergingAdult",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 19–22 года появится в ближайшем обновлении.",
    "themeKey": "emergingAdult",
  },
  "infancy": {
    "key": "0-1",
    "meta": {
      "description": "Исследуем привязанность, сенсомоторное развитие и ключевых авторов младенчества.",
      "title": "Младенчество 0–1 — DOM Academy",
    },
    "navLabel": "Младенчество (0–1 год)",
    "path": "/0-1",
    "periodId": "infancy",
    "themeKey": "infancy",
  },
  "intro": {
    "key": "intro",
    "meta": {
      "description": "Знакомство с психологией развития: вводное занятие и ключевые вопросы курса.",
      "title": "Вводное занятие — DOM Academy",
    },
    "navLabel": "Вводное занятие",
    "path": "/intro",
    "periodId": "intro",
    "themeKey": "intro",
    "videoSrc": "https://www.youtube.com/watch?v=0q4AZ3WsAAc",
  },
  "lateAdult": {
    "key": "66-80",
    "meta": {
      "description": "Когнитивные изменения и качество жизни пожилых людей.",
      "title": "Пожилой возраст 66–80 — DOM Academy",
    },
    "navLabel": "Пожилой возраст (66–80 лет)",
    "path": "/66-80",
    "periodId": "lateAdult",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 66–80 лет появится в ближайшем обновлении.",
    "themeKey": "older",
  },
  "midlife": {
    "key": "40-65",
    "meta": {
      "description": "Генеративность, кризисы и новые карьерные стратегии.",
      "title": "Средняя зрелость 40–65 — DOM Academy",
    },
    "navLabel": "Средняя зрелость (40–65 лет)",
    "path": "/40-65",
    "periodId": "midlife",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 40–65 лет появится в ближайшем обновлении.",
    "themeKey": "midAdult2",
  },
  "oldestOld": {
    "key": "80-plus",
    "meta": {
      "description": "Поддержка, исследования и смыслы самой поздней зрелости.",
      "title": "Долголетие 80+ — DOM Academy",
    },
    "navLabel": "Долголетие (80+ лет)",
    "path": "/80-plus",
    "periodId": "oldestOld",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 80+ лет появится в ближайшем обновлении.",
    "themeKey": "oldest",
  },
  "prenatal": {
    "key": "prenatal",
    "meta": {
      "description": "Ключевые понятия, литература и видео о пренатальном развитии ребёнка.",
      "title": "Пренатальный период — DOM Academy",
    },
    "navLabel": "Пренатальный период",
    "path": "/prenatal",
    "periodId": "prenatal",
    "themeKey": "prenatal",
  },
  "preschool": {
    "key": "3-6",
    "meta": {
      "description": "Игра, развитие мышления и социальные навыки дошкольников.",
      "title": "Дошкольный возраст 3–7 — DOM Academy",
    },
    "navLabel": "Дошкольный возраст (3–7 лет)",
    "path": "/3-6",
    "periodId": "preschool",
    "themeKey": "preschool",
  },
  "primary-school": {
    "key": "7-9",
    "meta": {
      "description": "Операции мышления, мотивация к учёбе и развитие школьников.",
      "title": "Младший школьный возраст 7–10 — DOM Academy",
    },
    "navLabel": "Младший школьный возраст (7–10 лет)",
    "path": "/7-9",
    "periodId": "primary-school",
    "placeholderDefaultEnabled": false,
    "placeholderText": "Контент для возраста 7–10 лет появится в ближайшем обновлении.",
    "themeKey": "school1",
  },
  "toddler": {
    "key": "1-3",
    "meta": {
      "description": "Речь, автономия и игры раннего детства в одном месте.",
      "title": "Раннее детство 1–3 — DOM Academy",
    },
    "navLabel": "Раннее детство (1–3 года)",
    "path": "/1-3",
    "periodId": "toddler",
    "themeKey": "toddler",
  },
}
`;

exports[`routes module > ROUTE_CONFIG: snapshot of full development course config 1`] = `
[
  {
    "key": "intro",
    "meta": {
      "description": "Знакомство с психологией развития: вводное занятие и ключевые вопросы курса.",
      "title": "Вводное занятие — DOM Academy",
    },
    "navLabel": "Вводное занятие",
    "path": "/intro",
    "periodId": "intro",
    "themeKey": "intro",
    "videoSrc": "https://www.youtube.com/watch?v=0q4AZ3WsAAc",
  },
  {
    "key": "prenatal",
    "meta": {
      "description": "Ключевые понятия, литература и видео о пренатальном развитии ребёнка.",
      "title": "Пренатальный период — DOM Academy",
    },
    "navLabel": "Пренатальный период",
    "path": "/prenatal",
    "periodId": "prenatal",
    "themeKey": "prenatal",
  },
  {
    "key": "0-1",
    "meta": {
      "description": "Исследуем привязанность, сенсомоторное развитие и ключевых авторов младенчества.",
      "title": "Младенчество 0–1 — DOM Academy",
    },
    "navLabel": "Младенчество (0–1 год)",
    "path": "/0-1",
    "periodId": "infancy",
    "themeKey": "infancy",
  },
  {
    "key": "1-3",
    "meta": {
      "description": "Речь, автономия и игры раннего детства в одном месте.",
      "title": "Раннее детство 1–3 — DOM Academy",
    },
    "navLabel": "Раннее детство (1–3 года)",
    "path": "/1-3",
    "periodId": "toddler",
    "themeKey": "toddler",
  },
  {
    "key": "3-6",
    "meta": {
      "description": "Игра, развитие мышления и социальные навыки дошкольников.",
      "title": "Дошкольный возраст 3–7 — DOM Academy",
    },
    "navLabel": "Дошкольный возраст (3–7 лет)",
    "path": "/3-6",
    "periodId": "preschool",
    "themeKey": "preschool",
  },
  {
    "key": "7-9",
    "meta": {
      "description": "Операции мышления, мотивация к учёбе и развитие школьников.",
      "title": "Младший школьный возраст 7–10 — DOM Academy",
    },
    "navLabel": "Младший школьный возраст (7–10 лет)",
    "path": "/7-9",
    "periodId": "primary-school",
    "placeholderDefaultEnabled": false,
    "placeholderText": "Контент для возраста 7–10 лет появится в ближайшем обновлении.",
    "themeKey": "school1",
  },
  {
    "key": "10-13",
    "meta": {
      "description": "Нейробиология риска, идентичность и поддержка пре-подростков.",
      "title": "Ранняя подростковость 10–13 — DOM Academy",
    },
    "navLabel": "Ранняя подростковость (10–13 лет)",
    "path": "/10-13",
    "periodId": "earlyAdolescence",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 10–13 лет появится в ближайшем обновлении.",
    "themeKey": "earlyTeen",
  },
  {
    "key": "14-18",
    "meta": {
      "description": "Социализация, принятие решений и развитие личности подростков.",
      "title": "Подростковость 14–18 — DOM Academy",
    },
    "navLabel": "Средняя подростковость (14–18 лет)",
    "path": "/14-18",
    "periodId": "adolescence",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 14–18 лет появится в ближайшем обновлении.",
    "themeKey": "teen",
  },
  {
    "key": "19-22",
    "meta": {
      "description": "Переход ко взрослости, идентичность и профессиональный поиск.",
      "title": "Юность 19–22 — DOM Academy",
    },
    "navLabel": "Юность (19–22 года)",
    "path": "/19-22",
    "periodId": "emergingAdult",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 19–22 года появится в ближайшем обновлении.",
    "themeKey": "emergingAdult",
  },
  {
    "key": "22-27",
    "meta": {
      "description": "Мы готовим материалы для ранней взрослости 22–27 лет.",
      "title": "Ранняя зрелость 22–27 — DOM Academy",
    },
    "navLabel": "Ранняя зрелость (22–27 лет)",
    "path": "/22-27",
    "periodId": "22-27",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 22–27 лет появится в ближайшем обновлении.",
    "themeKey": "earlyAdult",
  },
  {
    "key": "28-40",
    "meta": {
      "description": "Работа, близость и развитие партнёрства в 28–40 лет.",
      "title": "Ранняя зрелость 28–40 — DOM Academy",
    },
    "navLabel": "Ранняя зрелость (28–40 лет)",
    "path": "/28-40",
    "periodId": "earlyAdult",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 28–40 лет появится в ближайшем обновлении.",
    "themeKey": "midAdult1",
  },
  {
    "key": "40-65",
    "meta": {
      "description": "Генеративность, кризисы и новые карьерные стратегии.",
      "title": "Средняя зрелость 40–65 — DOM Academy",
    },
    "navLabel": "Средняя зрелость (40–65 лет)",
    "path": "/40-65",
    "periodId": "midlife",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 40–65 лет появится в ближайшем обновлении.",
    "themeKey": "midAdult2",
  },
  {
    "key": "66-80",
    "meta": {
      "description": "Когнитивные изменения и качество жизни пожилых людей.",
      "title": "Пожилой возраст 66–80 — DOM Academy",
    },
    "navLabel": "Пожилой возраст (66–80 лет)",
    "path": "/66-80",
    "periodId": "lateAdult",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 66–80 лет появится в ближайшем обновлении.",
    "themeKey": "older",
  },
  {
    "key": "80-plus",
    "meta": {
      "description": "Поддержка, исследования и смыслы самой поздней зрелости.",
      "title": "Долголетие 80+ — DOM Academy",
    },
    "navLabel": "Долголетие (80+ лет)",
    "path": "/80-plus",
    "periodId": "oldestOld",
    "placeholderDefaultEnabled": true,
    "placeholderText": "Контент для возраста 80+ лет появится в ближайшем обновлении.",
    "themeKey": "oldest",
  },
]
`;
